# fornix

./: .gitignore  .replit  @  Cargo.toml  Dockerfile  README.md  commands  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.nix  rustfmt.toml  test.js  todo.do_not_sync.yaml  todo.yaml  webpack.config.js
Assets/: .gitignore
Assets/3D Models/Materials/: FrameBlue.mat  FrameGreen 1.mat  FrameRed.mat  FrameYellow.mat  Glass.mat  Light.mat  Wheel.mat
Assets/ML-Agents/Timers/: CarTestWithCamera_timers.json  CarTest_timers.json  CarTrainPython_timers.json  CarTrainSimple_timers.json  CarTrain_timers.json
Assets/Materials/: Black.mat  Grass.mat  Wall.mat
Assets/MaterialsAndTextures/Basics/: Wall.mat
Assets/MaterialsAndTextures/Concrete/: Concrete_PillarDiffuse.mat  Concrete_Pillar_psd.mat  concrete.mat
Assets/Prefabs/: CarMoreRays.prefab  CarPrefab.prefab  CarWithCam.prefab  Corner.prefab  Corner_R.prefab  Cross.prefab  RoadObstacleX.prefab  RoadObstacleY.prefab  Straight.prefab  TrainingInstance.prefab  TrainingInstanceCamCar.prefab  TrainingInstance_OLD.prefab
Assets/Scenes/: CarPlay.unity  CarTest.unity  CarTestWithCamera.unity  CarTrain.unity  CarTrainPython.unity  CarTrainSimple.unity
Assets/Scripts/: Car.cs  CarAgent.cs  RoadEnvironmentController.cs  TrackTile.cs
ProjectSettings/: DynamicsManager.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
TrainerConfigs/: basic_trainer_config.yaml  curriculum_trainer_config.yaml  long_trainer_config.yaml
commands/: cargo  shell  start
commands/project/: build  clear_docker_space  compile  create_app  debug  dev  old_build  purge  run
commands/tools/: java
commands/tools/docker/: publish
documentation/: SETUP.md  setup.md
frontend/: index.html
main/: Main.java  library.rs  main.js  main.pl  main.rs  tauri.conf.json
main/backend/: main.rs
main/frontend/: file_system.js  index.html  main.js  main.jsx  tauri.conf.json  tauri_api.js
main/frontend/components/: box.jsx
main/module1/: Class1.java
main/pages/: home.js
main/tools/: ezElectron.js  index.html
resources/: AppRun-aarch64  AppRun-x86_64  appimagetool-x86_64.AppImage  fornix-tauri.appdata.xml  linuxdeploy-plugin-gtk.sh
scripting_helpers/: generate_workspace.js  pull_tauri_api.js
scripting_helpers/dependencies/: babel_runtime@v0.13.9.js  tauri_api@latest.js
settings/: _readme.md  fornix_core  project.json  tauri.conf.json
settings/#dependency_info/: shell.nix
settings/#system/: #@
settings/#system/#commands/: start
settings/#system/#functions/: commands  doit
settings/#system/#temporary/: .node_modules.cleanable.hash
settings/automatic_setup_prep/: 05100_copy_git.sh
settings/commands/project/: commands
settings/during_clean/: 700_cargo_clean.sh
settings/during_purge/: 591_rust.sh  708_tauri.sh
settings/during_start/: 005_000__setup_ld_path__.sh  052_000_ros_setup.sh  059_000_rustup_stable.sh  092_000_install_deno_packup.sh  092_000_tauri_cli.sh
settings/during_start_prep/: 007_100_docker_volume_share.sh  008_005_divert_to_docker.sh  089_001_hdiutil_injection_.sh  089_002_setfile_injection_.sh  089_003_bless_injection_.sh
settings/extensions/git/: #initialize.sh
settings/extensions/java/: #initialize.sh  when_cleaning.sh
settings/extensions/nix/: installer_helper  nix.toml  parse_dependencies.nix  settings.toml  shell.nix
settings/extensions/rust/: #establish_extension.sh  during_purge.sh  during_start.sh
settings/git/: config.user.do_not_sync.ini
settings/home/: .zshenv
settings/requirements/: Cargo.toml  shell.nix
settings/setup_automatically/: main.sh
settings/setup_automatically/steps/: 00500_setup_ld_path.sh
settings/when_cleaning/: 811_java.sh
settings/when_purging/: 812_purge_java.sh
src/: index.js  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
tauri_support/: generate_workspace.js  pull_tauri_api.js
tauri_support/dependencies/: babel_runtime@v0.13.9.js
(+66 files in other folders)
