[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
default-run = "tauri"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "= 1.0.0-rc.6", features = ["api-all"] }
tauri-utils = "= 1.0.0-rc.4"
tauri-codegen = "= 1.0.0-rc.4"
tauri-macros = "= 1.0.0-rc.4"
tauri-runtime = "= 0.3.4"
tauri-runtime-wry = "= 0.3.5"
deno_core = "0.139.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
