[package]
name = "tauri"
version = "0.1.0"
description = "A Tauri App"
default-run = "tauri"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "= 1.0.0-rc.6", features = ["api-all"] }
tauri-utils = "= 1.0.0-rc.4"
tauri-codegen = "= 1.0.0-rc.4"
tauri-macros = "= 1.0.0-rc.4"
tauri-runtime = "= 0.3.4"
tauri-runtime-wry = "= 0.3.5"
deno_core = "0.139.0"
lazy_static = "1.4.0"
unsafe_fn = "0.1.2"
serde_v8 = "0.50.0"
once_cell = "1.12.0"
deno_console = "0.57.0"
deno_crypto = "0.71.0"
deno_fetch = "0.80.0"
deno_bench_util = "0.51.0"
deno = "1.23.0"
deno_broadcast_channel = "0.51.0"
deno_ffi = "0.44.0"
deno_http = "0.51.0"
deno_net = "0.49.0"
deno_tls = "0.44.0"
deno_url = "0.57.0"
deno_web = "0.88.0"
deno_webgpu = "0.58.0"
deno_webidl = "0.57.0"
deno_websocket = "0.62.0"
deno_webstorage = "0.52.0"
deno_ops = "0.17.0"
deno_runtime = "0.65.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
