[package]
name = "fornix"
version = "0.1.0"
authors = [""]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "main/library.rs"

[[bin]]
name = "main"
path = "main/main.rs"

[dependencies]
http-types = "2.11.1"
serde = "1.0.153"
tide = "0.16.0"
async-std = {version = "1.9.0", features = ["attributes"]}
femme = "2.2.1"
