[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "= 1.0.0-beta.1", features = ["api-all"] }
tauri-utils = "= 1.0.0-beta.0"
tauri-codegen = "= 1.0.0-beta.0"
tauri-macros = "= 1.0.0-beta.1"
tauri-runtime = "= 0.1.1"
tauri-runtime-wry = "= 0.1.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
